--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dev-server": "json-server --watch db.json -p 3300"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "json-server": "^1.0.0-alpha.23",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.11.0",
     "sass": "^1.72.0"
   },
